--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,8 +61,8 @@ body{
     padding-bottom: 1%;
     text-align: center;
   }
-.body{
-    
+.brand-logo-center{
+    display: none;
 }
 .txt-line-1{
     color: white;
@@ -288,8 +288,11 @@ body{
         .services::before{
           content: none;          
         }
-        .image-logo{          
-          margin-left: 10rem;
+        .brand-logo{
+          display: none;
+        }
+        .brand-logo-center{
+          display: block;
         }
         #banner-section{
           background-image: url("../bg-art.png");
@@ -303,3 +306,20 @@ body{
           text-align: center;
         }
       }
+
+      /* @media only screen and (max-width: 360px) {
+        .button {
+          width: 45%;
+        }
+        .button4 {border-radius: 12px;}
+      }
+      @media only screen and (min-width: 320px) {
+        .button {
+          padding: 5px;
+          font-size: 12px;
+          margin: 4px 2px;
+          margin-left: 1%;
+          width: 35%;
+        }
+        .button4 {border-radius: 12px;}
+      } */
